--- a/.github/workflows/TeamWorkflow.yml
+++ b/.github/workflows/TeamWorkflow.yml
@@ -13,13 +13,12 @@ jobs:
     container:
       image: node
     steps:
-      name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm install
 
-      name: Build website
-      run: npm run build
+      - name: Build website
+        run: npm run build
 
-      
