Deliver to test

--- a/.github/workflows/TeamWorkflow.yml
+++ b/.github/workflows/TeamWorkflow.yml
@@ -22,3 +22,11 @@ jobs:
       - name: Build website
         run: npm run build
 
+      - name: FTP delivery
+        uses: SamKirkland/FTP-Deploy-Action@4.3.3
+        wiht:
+          server: ${{vars.FTP_SERVER}}
+          username: ${{secrets.FTP_USERNAME}}
+          password: ${{secrets.FTP_PASSWORD}}
+          server-dir: test/todo # test.sofiefischer.dk/todo
+          local-dir: dist/
