added / to yaml

--- a/.github/workflows/TeamWorkflow.yml
+++ b/.github/workflows/TeamWorkflow.yml
@@ -28,5 +28,5 @@ jobs:
           server: ${{vars.FTP_SERVER}}
           username: ${{secrets.FTP_USERNAME}}
           password: ${{secrets.FTP_PASSWORD}}
-          server-dir: test/todo # test.sofiefischer.dk/todo
+          server-dir: test/todo/ # test.sofiefischer.dk/todo/
           local-dir: dist/
