--- a/.github/workflows/TeamWorkflow.yml
+++ b/.github/workflows/TeamWorkflow.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: FTP delivery
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
-        wiht:
+        with:
           server: ${{vars.FTP_SERVER}}
           username: ${{secrets.FTP_USERNAME}}
           password: ${{secrets.FTP_PASSWORD}}
