--- a/.github/workflows/TeamWorkflow.yml
+++ b/.github/workflows/TeamWorkflow.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Build website
+        run: npm run build
+
       - name: FTP delivery
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
         with:
