--- a/.github/workflows/TeamWorkflow.yml
+++ b/.github/workflows/TeamWorkflow.yml
@@ -31,6 +31,17 @@ jobs:
           server-dir: test/todo/
           local-dir: dist/
 
+      - name: Install TestCafe
+        run: npm install -g testcafe
+
+      - name: Update APT
+        run: apt-get update
+
+      - name: Install Chromium
+        run: apt-get install -y chromium
+
+      - name: Run tests
+        run: testcafe chromium:headless tests/*  
 
 
 
