--- a/.github/workflows/TeamWorkflow.yml
+++ b/.github/workflows/TeamWorkflow.yml
@@ -41,7 +41,7 @@ jobs:
         run: apt-get install -y chromium
 
       - name: Run tests
-        run: testcafe chromium:headless tests/*  
+        run: testcafe chromium:headless test/*  
 
 
 
